[package]
name = "loki-logger"
version = "0.1.0"
authors = ["Thomas Nicollet <thomas.nicollet@nebulis.io>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "A loki logger for the log facade."
edition = "2021"
homepage = "https://github.com/nwmqpa/loki-logger"
repository = "https://github.com/nwmqpa/loki-logger"

[features]
default = [ "trust-dns" ]
blocking = [ "reqwest/blocking" ]
trust-dns = [ "reqwest/trust-dns" ]

[dependencies]
tokio = { version = "1.13.0", features = ["full"] }
reqwest = { version = "0.11.6", features = ["json" ] }
serde = { version = "1.0", features = ["derive"] }

[dependencies.log]
git = "https://github.com/rust-lang/log.git"
features = ["kv_unstable", "std"]

[[example]]
name = "main"

[[example]]
name = "with_labels"

[[example]]
name = "blocking"
required-features = ["blocking"]